# expensa

./: .gitignore  AWS-setup.md  README.md
.github/workflows/: build-api.yml  build-ocr-local.yml  build-ocr.yml
deployment/: .env.example  docker-compose.cloud.yml  docker-compose.local.yml  tables.sql
services/backend/: .dockerignore  Dockerfile  pyproject.toml
services/backend/app/: app.py
services/backend/app/core/: config.py  db.py  models.py  utils.py
services/backend/app/db/: models.py
services/backend/app/routers/: auth.py  deps.py  receipts.py
services/receipt-ocr/: .dockerignore  Dockerfile.cloud  Dockerfile.local  app.py  handler.py
