[project]
name = "meowny"
version = "0.1.0"
description = "Basic Expense Tracker API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.1",
    "boto3>=1.35.87",
    "fastapi[standard]>=0.115.6",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.1",
]
